# BP_2024_2025

./: .gitignore  .gitkeep  LICENSE  Makefile  README.md  docker-compose.yaml  environment.yml  pyproject.toml
config/: config.json  data_config.json
dashboard_app/: Dockerfile  pyproject.toml
dashboard_app/src/: app.py
dashboard_app/src/assets/: custom.css
dashboard_app/src/callbacks/: __init__.py  callbacks_breed_density.py  callbacks_breed_timeline.py  callbacks_database.py  callbacks_family_tree.py  callbacks_general.py  callbacks_navbar.py
dashboard_app/src/components/reusable/: BasicCard.py  BasicInput.py  GraphCard.py  MetricCard.py  PrimaryButton.py
dashboard_app/src/components/unique/: BreedDistributionChart.py  Footer.py  db_status_alert.py  navbar.py  search.py
dashboard_app/src/constants/: colors.py
dashboard_app/src/data/: db_connector.py
dashboard_app/src/pages/: breed_density.py  breed_timeline.py  family_tree.py  general_statistics.py  homepage.py
dashboard_app/src/utils/: cache.py  callback_utils.py  data_processing.py  inbreeding_coefficient.py  logger.py  visualization.py
data/helper_data/: EMS-List-2024-v010424.xlsx  country_codes_iso_original.csv
src/: Dockerfile.unified  entrypoint.sh
src/Data_Processing/: Phase_1.ipynb  Phase_2.ipynb  Phase_3.ipynb  Phase_4.ipynb  Phase_5.ipynb  run_notebooks.py
src/Eda/: BP_materials.ipynb  EDA_1.ipynb  EDA_2.ipynb  EDA_3.ipynb
src/db/neo4j/: neo4j_seeder.py
src/db/neo4j/test/: base_tester.py  (+3 more)
src/rel_vs_graph_performance/: run_all_tests.py
src/utils/: __init__.py  scripts.py
(+13 files in other folders)
