[tool.poetry]
name = "BachelorProject_Babiar"
version = "1.0.0"
description = ""
authors = ["Mário Babiar <mariobabiar11@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
dash = "3.0.4"
dash-bootstrap-components = "2.0.2"
flask-caching = "2.3.1"
ipykernel = "6.29.5"
jupyter = "1.1.1"
neo4j-rust-ext = "5.28.1.0"
networkx = "3.4.2"
openpyxl = "3.1.5"
pandas = "2.2.3"
polars = "1.25.2"
psycopg2 = "2.9.10"
python = "3.12.10"
pyvis = "0.3.2"
sqlalchemy = "2.0.36"
termcolor = "3.0.1"
tqdm = "4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
